@@ -30,8 +30,6 @@ AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 AC_PROG_LIBTOOL
 AM_CONFIG_HEADER(config.h)
 
-dnl AM_MAINTAINER_MODE
-
 AC_ISC_POSIX
 AC_PROG_CXX
 AC_PROG_CC
